# imako

./: .envrc  .gitignore  .hlint.yaml  .pr-body.md  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  GEMINI.md  README.md  cabal.project  flake.nix  justfile  om.yaml  tailwind.config.js  vira.hs
.github/workflows/: ci.yaml  e2e.yml
backend/: flake-module.nix
backend/generate-types/: flake-module.nix  generate-types.cabal
backend/generate-types/src/: Main.hs
backend/imako/: imako.cabal
backend/imako/src/: Main.hs
backend/imako/src/Imako/: CLI.hs  Core.hs
backend/imako/src/Imako/API/: Protocol.hs  TypeScriptOrphans.hs  WebSocket.hs
backend/imako/src/Imako/Core/: Filter.hs  FolderTree.hs
backend/ob/: CHANGELOG.md  LICENSE  ob.cabal
backend/ob/src/: Ob.hs
backend/ob/src/Ob/: DailyNotes.hs  Html.hs  Json.hs  LinkGraph.hs  Markdown.hs  Note.hs  Task.hs  Vault.hs
backend/ob/src/Ob/Task/: Properties.hs  Recurrence.hs
backend/ob/src/Ob/Vault/: Ix.hs
backend/ob/src/Text/Pandoc/Definition/: TypeScript.hs
backend/ob/test/Ob/: TaskSpec.hs
backend/ob/test/Ob/Task/: RecurrenceSpec.hs
backend/pandoc-typescript/: CHANGELOG.md  README.md  pandoc-typescript.cabal
backend/pandoc-typescript/src/Text/Pandoc/Definition/: TypeScript.hs
crates/imako-core/: Cargo.toml
crates/imako-core/src/: app_state.rs  folder_tree.rs  lib.rs  protocol.rs
crates/ob/: Cargo.toml
crates/ob/src/: daily_notes.rs  events.rs  folder_tree.rs  html.rs  lib.rs  link.rs  link_graph.rs  markdown.rs  note.rs  task.rs  vault.rs
crates/ob/src/task/: properties.rs  recurrence.rs
example/: hello.md
example/.obsidian/: daily-notes.json
example/Daily/: 2026-02-17.md  2026-02-18.md  2026-02-19.md
example/Notes/: MarkdownShowcase.md  Tasks.md  Welcome.md  Wikilinks.md
example/Projects/: Active.md
example/Projects/Team/: Backend.md  Frontend.md
frontend/: flake-module.nix  index.html  package-lock.json  package.json  package.nix  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx  store.ts  types.ts
frontend/src/components/: CalendarWidget.tsx  CommandPalette.tsx  FileNode.tsx  FilterBar.tsx  FolderTree.tsx  Header.tsx  JournalView.tsx  MonthCalendar.tsx  NavBar.tsx  ObsidianEditLink.tsx  TaskItem.tsx  VaultHeader.tsx
frontend/src/components/markdown/: AstRenderer.tsx  BlockRenderer.tsx  CodeBlock.tsx  InlineRenderer.tsx  index.ts  types.ts
frontend/src/hooks/: usePersistedSet.ts
frontend/src/pages/: NotesPage.tsx  TasksPage.tsx  VaultPage.tsx
frontend/src/state/: filters.ts  theme.ts
frontend/src/sync/: websocket.ts
frontend/src/utils/: calendarUtils.ts  dates.ts  icons.ts  obsidian.ts  taskTree.ts
home-units/: .gitignore  README.md  cabal.project  mod.just
imako/: imako.cabal
imako/src/: Main.hs
nix/: e2e.nix
nix/examples/home-manager/: flake.nix
nix/flake/: devshell.nix
nix/home-manager/: flake-module.nix  imako.nix
nix/home-manager/example/: flake.nix
nix/modules/: devshell.nix  e2e.nix  pre-commit.nix  rust.nix
nix/modules/flake/: devshell.nix  frontend.nix  haskell.nix  home-module.nix  pre-commit.nix
nix/modules/flake-parts/: devshell.nix  haskell.nix
nix/modules/home-manager/: imako.nix
ob/: CHANGELOG.md  ob.cabal
ob/src/: Ob.hs
src/: cli.rs  main.rs  server.rs
src/components/: folder_tree.rs  header.rs  markdown_view.rs  mod.rs  note_view.rs  task_item.rs  vault_page.rs
src/pages/: mod.rs  vault_page.rs
src/server/: api.rs  mod.rs  state.rs
tests/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/e2e/: dsl.ts  vault.spec.ts
tests/e2e/dsl/: app.ts  index.ts  views.ts
tests/e2e/specs/: backlinks.spec.ts  connection.spec.ts  folder-contents.spec.ts  journals.spec.ts  live-sync.spec.ts  markdown-rendering.spec.ts  notes.spec.ts  routing.spec.ts  tasks.spec.ts
