[workspace]
members = ["crates/ob"]
resolver = "2"

[package]
name = "imako"
version = "0.1.0"
edition = "2021"
description = "Journaling and planning for Obsidian notebooks"
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
license = "AGPL-3.0-or-later"

[dependencies]
ob = { path = "crates/ob" }
dioxus = { version = "0.6", features = ["fullstack", "router"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = "0.4"

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]
