[workspace]
members = ["crates/ob"]
resolver = "2"

[package]
name = "imako"
version = "0.1.0"
edition = "2024"
description = "Journaling and planning for Obsidian notebooks"
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
license = "AGPL-3.0-or-later"

[dependencies]
ob = { path = "crates/ob" }
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
# Pin to match dx CLI's bundled wasm-bindgen-cli version
wasm-bindgen = "=0.2.108"

# Server-only dependencies (not available on WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[features]
default = ["server"]
server = ["dioxus/server"]
web = ["dioxus/web"]
