cabal-version:   3.4
name:            ob
version:         0.2.0.0
synopsis:        Live in-memory sync of Obsidian Markdown notes

-- description:
homepage:        https://github.com/srid/imako/tree/master/ob
license:         BSD-3-Clause
license-file:    LICENSE
author:          Sridhar Ratnakumar
maintainer:      srid@srid.ca

-- copyright:
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    Ob
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , async
    , base                 ^>=4.18.2.1
    , commonmark-simple
    , commonmark-wikilink
    , containers
    , filepath
    , monad-logger
    , pandoc
    , pandoc-types
    , relude
    , stm
    , unionmount
    , unliftio

  hs-source-dirs:     src
  default-language:   GHC2021

test-suite ob-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base  ^>=4.18.2.1
    , ob
