cabal-version:   3.4
name:            ob
version:         0.2.0.0
synopsis:        Live in-memory sync of Obsidian Markdown notes

-- description:
homepage:        https://github.com/srid/imako/tree/master/ob
license:         AGPL-3.0-or-later
license-file:    LICENSE
author:          Sridhar Ratnakumar
maintainer:      srid@srid.ca

-- copyright:
category:        Text
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:
    Ob
    Ob.DailyNotes
    Ob.Html
    Ob.Link
    Ob.Markdown
    Ob.Note
    Ob.Task
    Ob.Task.Properties
    Ob.Task.Recurrence
    Ob.Vault

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  -- other-modules:
  -- other-extensions:
  build-depends:
    , aeson
    , aeson-typescript
    , async
    , base
    , commonmark-simple
    , commonmark-wikilink
    , containers
    , directory
    , filepath
    , lucid2
    , lvar                 >=0.2
    , megaparsec
    , monad-logger
    , pandoc
    , pandoc-types
    , relude
    , stm
    , text
    , time
    , unionmount
    , unliftio
    , uri-encode

  hs-source-dirs:     src
  default-language:   GHC2021

test-suite ob-test
  import:             warnings
  default-language:   GHC2021
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  other-modules:
    Ob.DailyNotesSpec
    Ob.Task.RecurrenceSpec
    Ob.TaskSpec

  -- other-extensions:
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , aeson
    , base
    , commonmark-simple
    , filepath
    , hspec
    , hspec-discover
    , neat-interpolation
    , ob
    , pandoc-types
    , relude
    , time
