cabal-version: 3.4
name:          pandoc-typescript
version:       0.1.0.0
synopsis:      TypeScript type generation for Pandoc AST types
homepage:
  https://github.com/srid/imako/tree/master/backend/pandoc-typescript

license:       MIT
license-file:  LICENSE
author:        Sridhar Ratnakumar
maintainer:    srid@srid.ca
category:      Text
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:             warnings
  exposed-modules:    Text.Pandoc.Definition.TypeScript
  default-extensions: OverloadedStrings
  build-depends:
    , aeson
    , aeson-typescript
    , base
    , pandoc-types
    , text

  hs-source-dirs:     src
  default-language:   GHC2021
