[package]
name = "imako-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Imako application logic"

[dependencies]
ob = { path = "../ob" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
