[package]
name = "ob"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Obsidian vault parsing library"

[dependencies]
# Markdown parsing
comrak = { version = "0.36", default-features = false, features = ["shortcodes", "syntect"] }

# Filesystem
walkdir = "2"
notify = { version = "7", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Graph
petgraph = "0.7"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1", features = ["sync", "fs", "rt"] }

# Error handling
thiserror = "2"

# URL encoding
percent-encoding = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
