[package]
name = "ob"
version = "0.1.0"
edition = "2024"
description = "Rust library for working with Obsidian vaults"
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
license = "AGPL-3.0-or-later"

[dependencies]
comrak = { version = "0.36", default-features = false, features = ["syntect"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

# OS-only dependencies (vault scanning, file watching) — not available on WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt"] }
